--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "postcss": "^8",
